--- a/itext/itext.io/itext.io.netstandard.csproj
+++ b/itext/itext.io/itext.io.netstandard.csproj
@@ -1,89 +1,91 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-  <PropertyGroup Label="Configuration">
-    <SignAssembly>True</SignAssembly>
-    <DelaySign>False</DelaySign>
-    <DocumentationFile>$(TargetDir)bin\$(Configuration)\$(TargetFramework)\itext.io.xml</DocumentationFile>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.0;net40</TargetFrameworks>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OutputType>library</OutputType>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>itext.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <AssemblyName>itext.io</AssemblyName>
-    <RootNamespace />
-  </PropertyGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="resources\AdobeGlyphList.txt">
-      <LogicalName>iText.IO.Font.AdobeGlyphList.txt</LogicalName>
-    </EmbeddedResource>
-    <None Include="resources\cmap_info.txt" />
-    <None Include="resources\mustRead.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="resources\afm\Courier-Bold.afm">
-      <LogicalName>iText.IO.Font.Afm.Courier-Bold.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Courier-BoldOblique.afm">
-      <LogicalName>iText.IO.Font.Afm.Courier-BoldOblique.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Courier-Oblique.afm">
-      <LogicalName>iText.IO.Font.Afm.Courier-Oblique.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Courier.afm">
-      <LogicalName>iText.IO.Font.Afm.Courier.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Helvetica-Bold.afm">
-      <LogicalName>iText.IO.Font.Afm.Helvetica-Bold.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Helvetica-BoldOblique.afm">
-      <LogicalName>iText.IO.Font.Afm.Helvetica-BoldOblique.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Helvetica-Oblique.afm">
-      <LogicalName>iText.IO.Font.Afm.Helvetica-Oblique.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Helvetica.afm">
-      <LogicalName>iText.IO.Font.Afm.Helvetica.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Symbol.afm">
-      <LogicalName>iText.IO.Font.Afm.Symbol.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Times-Bold.afm">
-      <LogicalName>iText.IO.Font.Afm.Times-Bold.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Times-BoldItalic.afm">
-      <LogicalName>iText.IO.Font.Afm.Times-BoldItalic.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Times-Italic.afm">
-      <LogicalName>iText.IO.Font.Afm.Times-Italic.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\Times-Roman.afm">
-      <LogicalName>iText.IO.Font.Afm.Times-Roman.afm</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="resources\afm\ZapfDingbats.afm">
-      <LogicalName>iText.IO.Font.Afm.ZapfDingbats.afm</LogicalName>
-    </EmbeddedResource>
-  </ItemGroup>
-  <PropertyGroup>
-    <NoWarn>1701;1702;1591;1570;1572;1573;1574;1580;1584;1658</NoWarn>
-  </PropertyGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
-    <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <PackageReference Include="System.Globalization.Extensions" Version="4.3.0" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-    <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.1.9" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
-  </ItemGroup>
+	<PropertyGroup Label="Configuration">
+		<SignAssembly>True</SignAssembly>
+		<DelaySign>False</DelaySign>
+		<DocumentationFile>$(TargetDir)bin\$(Configuration)\$(TargetFramework)\itext.io.xml</DocumentationFile>
+		<WarningLevel>4</WarningLevel>
+	</PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net5.0;netstandard2.0;net40</TargetFrameworks>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Version>7.2.0.1</Version>
+	</PropertyGroup>
+	<PropertyGroup>
+		<OutputType>library</OutputType>
+	</PropertyGroup>
+	<PropertyGroup>
+		<AssemblyOriginatorKeyFile>itext.snk</AssemblyOriginatorKeyFile>
+	</PropertyGroup>
+	<PropertyGroup>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<AssemblyName>itext.io</AssemblyName>
+		<RootNamespace />
+	</PropertyGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="resources\AdobeGlyphList.txt">
+			<LogicalName>iText.IO.Font.AdobeGlyphList.txt</LogicalName>
+		</EmbeddedResource>
+		<None Include="resources\cmap_info.txt" />
+		<None Include="resources\mustRead.html" />
+	</ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="resources\afm\Courier-Bold.afm">
+			<LogicalName>iText.IO.Font.Afm.Courier-Bold.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Courier-BoldOblique.afm">
+			<LogicalName>iText.IO.Font.Afm.Courier-BoldOblique.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Courier-Oblique.afm">
+			<LogicalName>iText.IO.Font.Afm.Courier-Oblique.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Courier.afm">
+			<LogicalName>iText.IO.Font.Afm.Courier.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Helvetica-Bold.afm">
+			<LogicalName>iText.IO.Font.Afm.Helvetica-Bold.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Helvetica-BoldOblique.afm">
+			<LogicalName>iText.IO.Font.Afm.Helvetica-BoldOblique.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Helvetica-Oblique.afm">
+			<LogicalName>iText.IO.Font.Afm.Helvetica-Oblique.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Helvetica.afm">
+			<LogicalName>iText.IO.Font.Afm.Helvetica.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Symbol.afm">
+			<LogicalName>iText.IO.Font.Afm.Symbol.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Times-Bold.afm">
+			<LogicalName>iText.IO.Font.Afm.Times-Bold.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Times-BoldItalic.afm">
+			<LogicalName>iText.IO.Font.Afm.Times-BoldItalic.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Times-Italic.afm">
+			<LogicalName>iText.IO.Font.Afm.Times-Italic.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\Times-Roman.afm">
+			<LogicalName>iText.IO.Font.Afm.Times-Roman.afm</LogicalName>
+		</EmbeddedResource>
+		<EmbeddedResource Include="resources\afm\ZapfDingbats.afm">
+			<LogicalName>iText.IO.Font.Afm.ZapfDingbats.afm</LogicalName>
+		</EmbeddedResource>
+	</ItemGroup>
+	<PropertyGroup>
+		<NoWarn>1701;1702;1591;1570;1572;1573;1574;1580;1584;1658</NoWarn>
+	</PropertyGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
+		<Reference Include="System" />
+		<Reference Include="System.Drawing" />
+	</ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+		<PackageReference Include="System.Globalization.Extensions" Version="4.3.0" />
+		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+		<PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.1.9" />
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
+	</ItemGroup>
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net5.0' ">
 		<PackageReference Include="System.Globalization.Extensions" Version="4.3.0" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
@@ -91,7 +93,7 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
 	</ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Common.Logging" Version="3.4.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Common.Logging" Version="3.4.1" />
+	</ItemGroup>
 </Project>
